--- a/assign2/assign2.tex
+++ b/assign2/assign2.tex
@@ -54,6 +54,9 @@ Please read the transposition  cipher documented in the Appendix of Lecture 2.
 Then use the example transposition cipher on Slide No. 25 to encrypt the message 
 \texttt{killthem}. Write down the corresponding ciphertext.  \hfill \fbox{10 marks} 
 
+\textbf{Solution:}
+
+
 
 \item[Q2.] 
 There are ten pieces of ciphertext in the following URL:  \\
